syntax = "proto3";

package pb.unit.post;
option go_package = "github.com/aglide100/dak-blog/pb/unit/post";

import "pb/unit/comment/comment.proto";

message Post {
    ID id = 1;
    Spec spec = 2;
    Comments commets = 3;
}

message ID {
    string uuid =1;
}

message Spec {
    string title = 1;
    string author = 2;
    string written_date = 3;
    string content = 4;
    string thumbnail = 5;
    repeated string pictureURLs = 6;
}

message Comments {
    repeated pb.unit.comment.Comment Comment = 1;
}