syntax = "proto3";

package pb.svc.post;
option go_package = "github.com/aglide100/dak-blog/pkg/pb/unit/post";

service Post {
    rpc CreatePost(CreatePostReq) returns (CreatePostRes);
    rpc UpdatePost(UpdatePostReq) returns (UpdatePostRes);
    rpc GetPost(GetPostReq) returns (GetPostRes);
    rpc DeletePost(DeletePostReq) returns (DeletePostRes);
    rpc ListPost(ListPostReq) returns (ListPostRes);
}

message CreatePostReq {

}

message CreatePostRes {
    
}

message UpdatePostReq {

}

message UpdatePostRes {

}

message GetPostReq {

}

message GetPostRes {

}

message DeletePostReq {

}

message DeletePostRes {

}

message ListPostReq {
    
}

message ListPostRes {
    
}